assets/css/main.css
body {
    background: #f1f1f1;
}

.banner {
    /* change height of banner */
    padding: 70px;
    text-align: center;
    /* insert background color here */
    background: #1E90FF;
    /* insert text color here */
    color: white;
}

.navbar {
    /* overflow: hidden; commented out to allow mobile layout */
    background-color: #e8ecef;
    height: 55px;
    margin-top: -15px;
}

/* nav bar link styling */
#navleft {
    float: left;
    display: block;
    color: #08abdb;
    text-align: center;
    padding: 20px 30px;
    text-decoration: none; /* remove underline */
    font-size: 125%;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: bold;
}

#navright {
    float: right;
    display: block;
    color: #08abdb;
    text-align: center;
    padding: 20px 30px;
    text-decoration: none; /* remove underline */
    font-size: 125%;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: bold;
}

/* Change color on hover */
.navbar a:hover {
    background-color: #ddd;
    color: black;
}

/* Effect for terminal as background */
.terminal {
    background-color: #02102b;
    box-sizing: content-box;
    height: 400px;
    display: block;
    padding: 30px;
    margin-top: 0px;
}

/* Terminal output styling */
#output {
    color: white;
    font-style: italic;
    font-size: 20px;
    font-family: 'Source Sans Pro', sans-serif;
    margin-top: 50px;
    margin-left: 150px;
    margin-right: 150px;
}

.footer {
    /* editing fixed position of footer broke some stuff */
    /*position: fixed;*/
    /*left: 0;*/
    /*bottom: 0;*/
    /*width: 100%;*/
    padding: 20px;
    text-align: center;
    background: #ddd;
    color: #ddd;
}

/* styling social media buttons */
.fa {
    padding: 15px;
    font-size: 15px;
    height: 15px;
    width: 15px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
    background: #55ACEE;
    color: white;
}

.fa:hover {
    opacity: 0.7;
}

/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .terminal {
        width: 100%;
        height: 1600px;
    }
    .navbar {
        float: none;
        display: block;
        text-align: left;
        height: 200px;
    }
}

